# universal-machine

./: LICENSE  README.md  stack.yaml  universal-machine.cabal
app/: Command.hs  Main.hs
machine-examples/: addition.machine  example.machine  machine.dsl  multiplication.machine  subtraction.machine
src/: UniversalMachine.hs
src/UniversalMachine/: Parser.hs
