name:                universal-machine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jean-lopes/universal-machine#readme
license:             MIT
license-file:        LICENSE
author:              Jean Lopes
maintainer:          jean.lopes@hotmail.com.br
copyright:           Jean Lopes © 2017
category:            other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UniversalMachine
                     , UniversalMachine.Parser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , parsec
  default-language:    Haskell2010

executable universal-machine
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , universal-machine
  default-language:    Haskell2010

test-suite universal-machine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , universal-machine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jean-lopes/universal-machine
